// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`My Account Left Nav should not render any links if navData is empty 1`] = `
<Fragment>
  <ul />
</Fragment>
`;

exports[`My Account Left Nav should render links with sub section  1`] = `
<Fragment>
  <ul>
    <li
      className="nav-link-wrapper"
      id="myWallet"
      key="myWallet"
    >
      <Styled(Anchor)
        anchorVariation="primary"
        fontSizeVariation="large"
        fontWeightVariation="active"
      />
    </li>
    <li
      className="nav-link-wrapper"
      id="earnExtraPoints"
      key="earnExtraPoints"
    >
      <Styled(Anchor)
        anchorVariation="primary"
        fontSizeVariation="large"
        fontWeightVariation="active"
      />
    </li>
    <li
      className="nav-link-wrapper"
      id="myPlaceRewards"
      key="myPlaceRewards"
    >
      <Styled(Anchor)
        anchorVariation="primary"
        fontSizeVariation="large"
        fontWeightVariation="active"
      />
      <ul
        className="nav-sub-section"
      >
        <li
          className="nav-link-wrapper"
          id="pointsHistory"
          key="pointsHistory"
        >
          <Styled(Anchor)
            anchorVariation="grayed"
            asPath="/account/place-rewards/points-history"
            fontSizeVariation="large"
            fontWeightVariation=""
            to="/account?id=pointsHistoryPage"
          >
            Points History
          </Styled(Anchor)>
        </li>
      </ul>
    </li>
  </ul>
</Fragment>
`;

exports[`My Account Left Nav should render only 2  links if navData has 2 links 1`] = `
<Fragment>
  <ul>
    <li
      className="nav-link-wrapper"
      id="myWallet"
      key="myWallet"
    >
      <Styled(Anchor)
        anchorVariation="primary"
        fontSizeVariation="large"
        fontWeightVariation="active"
      />
    </li>
    <li
      className="nav-link-wrapper"
      id="earnExtraPoints"
      key="earnExtraPoints"
    >
      <Styled(Anchor)
        anchorVariation="primary"
        fontSizeVariation="large"
        fontWeightVariation="active"
      />
    </li>
  </ul>
</Fragment>
`;
